@@ -7,7 +7,9 @@ import jakarta.validation.Valid;
 
 import com.bakdata.conquery.apiv1.query.concept.specific.CQConcept;
 import com.bakdata.conquery.io.jackson.View;
+import com.bakdata.conquery.models.common.Range;
 import com.bakdata.conquery.models.datasets.concepts.select.connector.SingleColumnSelect;
+import com.bakdata.conquery.models.events.MajorTypeId;
 import com.bakdata.conquery.models.identifiable.ids.specific.ColumnId;
 import com.bakdata.conquery.models.identifiable.ids.specific.InternToExternMapperId;
 import com.bakdata.conquery.models.index.InternToExternMapper;
@@ -17,6 +19,8 @@ import com.bakdata.conquery.models.query.resultinfo.printers.Printer;
 import com.bakdata.conquery.models.query.resultinfo.printers.PrinterFactory;
 import com.bakdata.conquery.models.types.ResultType;
 import com.bakdata.conquery.models.types.SemanticType;
+import com.fasterxml.jackson.annotation.JsonIgnore;
+import io.dropwizard.validation.ValidationMethod;
 import lombok.Getter;
 
 @Getter
@@ -30,10 +34,15 @@ public abstract class MappableSingleColumnSelect extends SingleColumnSelect {
 	@View.ApiManagerPersistence
 	private final InternToExternMapperId mapping;
 
+	@Nullable
+	@Valid
+	private final Range.IntegerRange substringRange;
 
-	public MappableSingleColumnSelect(ColumnId column, @Nullable InternToExternMapperId mapping) {
+
+	public MappableSingleColumnSelect(ColumnId column, @Nullable InternToExternMapperId mapping, @Nullable Range.IntegerRange substringRange) {
 		super(column);
 		this.mapping = mapping;
+		this.substringRange = substringRange;
 	}
 
 	@Override
@@ -50,18 +59,25 @@ public abstract class MappableSingleColumnSelect extends SingleColumnSelect {
 	@Override
 	public SelectResultInfo getResultInfo(CQConcept cqConcept) {
 
-		if (!isCategorical()) {
-			return new SelectResultInfo(this, cqConcept, Collections.emptySet());
+		if (isCategorical()) {
+			return new SelectResultInfo(this, cqConcept, Set.of(new SemanticType.CategoricalT()));
 		}
+		return new SelectResultInfo(this, cqConcept, Collections.emptySet());
 
-		return new SelectResultInfo(this, cqConcept, Set.of(new SemanticType.CategoricalT()));
 	}
 
 	@Override
 	public ResultType getResultType() {
-		if(mapping == null){
+		if (mapping == null) {
 			return ResultType.resolveResultType(getColumn().resolve().getType());
 		}
+
+		InternToExternMapper resolved = mapping.resolve();
+
+		if (resolved.isAllowMultiple()) {
+			return new ResultType.ListT<>(ResultType.Primitive.STRING);
+		}
+
 		return ResultType.Primitive.STRING;
 	}
 
@@ -69,5 +85,38 @@ public abstract class MappableSingleColumnSelect extends SingleColumnSelect {
 		if (mapping != null) {
 			mapping.resolve().init();
 		}
+	}
+
+	@JsonIgnore
+	@ValidationMethod(message = "Selects using Substrings must be based on STRING columns.")
+	public boolean isStringIfSubstring() {
+		if (getSubstringRange() == null) {
+			return true;
+		}
+
+		return getColumn().resolve().getType().equals(MajorTypeId.STRING);
+	}
+
+	@JsonIgnore
+	@ValidationMethod(message = "Selects using Mappings must be based on STRING columns.")
+	public boolean isStringIfMapping() {
+		if (getMapping() == null) {
+			return true;
+		}
+
+		return getColumn().resolve().getType().equals(MajorTypeId.STRING);
+	}
+
+	@JsonIgnore
+	@ValidationMethod(message = "Substrings must start at 0.")
+	public boolean isMinPositive() {
+		if (getSubstringRange() == null) {
+			return true;
+		}
+		if (getSubstringRange().getMin() == null) {
+			return true;
+		}
+
+		return getSubstringRange().getMin() >= 0;
 	}
 }
